funcionalidade de habilitar link fórum

--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,22 @@
   "manifest_version": 3,
   "name": "Ativar Pesquisa",
   "version": "1.0",
-  "description": "Ativa a classe task-menu-header-search",
+  "description": "Ativa a classe task-menu-header-search e transforma Fórum em link",
   "action": {
-      "default_popup": "index.html"
+    "default_popup": "index.html"
   },
   "permissions": ["scripting", "activeTab"],
   "host_permissions": ["<all_urls>"],
   "icons": {
-        "16": "icon-se.png",
-        "48": "icon-se.png",
-        "128": "icon-se.png"}
+    "16": "icon-se.png",
+    "48": "icon-se.png",
+    "128": "icon-se.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_idle"
+    }
+  ]
 }
